Contact me section created, mobile Navbar dark mode fixed

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 }
 
 .active {
-  color: var(--color-main);
+  color: var(--color-light-hover);
 }
 
 body {
